fix: fix scrollbar causing page reflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply bg-slate-100 h-screen;
+  @apply bg-slate-100 h-screen overflow-y-scroll;
 }
